# real-world-haskell

./: README.md
ch18/: LICENSE  ch18.cabal
ch18/app/: Main.hs
ch18/src/: CountEntries.hs  CountEntriesT.hs  LocalReader.hs  UglyStack.hs
