cabal-version:      3.0
name:               ch18
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             David Sáenz
maintainer:         dsaenz@bebanjo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:   CountEntries
                     , CountEntriesT
                     , LocalReader
                     , UglyStack
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , directory
                    , filepath
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable ch18
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:   base ^>=4.17.2.1
                   , directory
                   , mtl
                   , ch18

    hs-source-dirs:   app
    default-language: Haskell2010
